FEATURE: Core | Can now specify that password protected tracker web is only available via HTTPS, HTTP access -> access denied [Parg]
FEATURE: Core | Can now specify comment to be added to share torrents [Parg]
FEATURE: Plug | Status mailer support for SMTP port, user + password [Parg]
FEATURE: UI   | Telnet UI added [Fatal]

CHANGE: Core | Support azureus.install.path parameter, used by new linux launcher script [Nolar]
CHANGE: UI   | Create torrent wizard now initially defaults torrent save path from "save to" default [Parg]
CHANGE: Core | Moved config items for tracker client overrides + UDP to tracker client config [Parg]
CHANGE: UI   | Obey "start stopped" config item for dropped torrents [Parg]
CHANGE: UI   | Torrents no longer need to be stopped before removal is allowed [Nolar]
CHANGE: UI   | Graphical view item refresh optimizations [Nolar]
CHANGE: Core | Also do dynamic tracker re-announce interval overrides when seeding; uses peer count only [Nolar]
CHANGE: Core | NAT check url changed to aelitis server [Nolar]
CHANGE: Core | Reduce tracker re-announce interval when incoming connections are accepted (unfirewalled) [Nolar]
CHANGE: Core | Remove old auto-migration code [Nolar]
CHANGE: Core | Update restart logic now preserves JVM max mem setting for Sun JVMs [Parg]
CHANGE: Core | Cleanup and optimize choke-unchoke logic [Nolar]
CHANGE: UI   | Change context menu selection for queue/stop/force-start/recheck to be "at least one can be..." rather than "all can be..." [Parg]

BUGFIX: Core | Fix for kernel panics under MacOSX [ej32206, Nolar]
BUGFIX: UI   | Old language files in user dir causing !missing! item texts [Nolar]
BUGFIX: UI   | Fix for window state not being remembered between sessions [Nolar]
BUGFIX: UI   | Fix for messages window being closed while animated [Gudy]
BUGFIX: UI   | Fix for BUG 1059432 : Download bars spawning multiple times when set to auto open [Gudy]
BUGFIX: UI   | Fix for BUG 1061538 : /0 error if no pieces [Parg]